fixing many